AC_INIT([project_name], [1.0], [daniel@statusengine.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC

# Checks for libraries.
# Example: AC_CHECK_LIB([library], [function])
# You can add library checks if your project depends on any external libraries.

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
